--- a/01_task_hello_world/task_hello_world.yml
+++ b/01_task_hello_world/task_hello_world.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
+  source: {repository: busybox, registry_mirror: "http://8d50d6d0.m.daocloud.io"}
 
 run:
   path: echo
